--- a/vue-app/.env.production
+++ b/vue-app/.env.production
@@ -2,6 +2,6 @@
 ENV= 'production'
 
 #base api
-VITE_PUBLIC_PATH='/app-vue'
+VITE_PUBLIC_PATH='./app-vue'
 APP_SERVE_URL = 'http://49.4.89.232:10061'
 APP_IMAGES_URL = 'https://anxzfile.ynyplt.com' // 图片地址
